Fix - misaligned position of undo button in navbar
Fix of issue #35 opened by phivk

--- a/src/trialogue.css
+++ b/src/trialogue.css
@@ -94,6 +94,7 @@ nav .nav-icon {
 
 nav a.content-container:not(:first-child) {
   padding-left: 0.5em;
+  margin-right: auto;
 }
 
 /* Chat Panel */
